# opengl-renderer-cpp-1

./: .gitignore  CMakeLists.txt  Makefile  renderer
include/: InputManager.hpp  Window.hpp  application.hpp  camera.hpp  display.hpp  mesh.hpp  shader.hpp  texture.hpp
shaders/: lamp_frag.glsl
src/: InputManager.cpp  Window.cpp  application.cpp  camera.cpp  display.cpp  main.cpp  mesh.cpp  shader.cpp  texture.cpp
